--- a/src/index.pug
+++ b/src/index.pug
@@ -21,7 +21,7 @@ html(lang="ru")
             button.buttonThirdAnim Запустить анимацию
             .thirdAnim
         section
-            h2 Движение requestAnimationDrame
+            h2 Движение requestAnimationFrame
             button.buttonForthAnim Запустить анимацию
             .forthAnim
 
